# UTB-FAI-programs

./: README.md
bachelor/semester-2/Blender/: jas39gripen.blend  readme.md
bachelor/semester-2/Theory-of-information-transfer/effective-codes/: README.md
bachelor/semester-2/Theory-of-information-transfer/hamming-code/: README.md
bachelor/semester-3/cryptology/ADFGVX/: main.py  mainwindow.ui  readme.md
bachelor/semester-3/cryptology/RSA/: main.py  mainwindow.ui  readme.md
bachelor/semester-3/cryptology/affine-cipher/: affinecipher.py  mainwindow.ui  readme.md
bachelor/semester-3/theoretical-informatics/: readme.md  task-1.nb  task-2.nb  task-3.nb  task-4.nb  task-5.nb
bachelor/semester-4/software-testing/: readme.md
master/semester-2/mathematical-informatics/: readme.md  task-1.py  task-2.py  task-3.ipynb  task-4.ipynb  task-5.ipynb
master/semester-2/parallel-processes/: readme.md
master/semester-2/parallel-processes/task-4/: CMakeLists.txt  CMakeLists.txt.user.66af744  main.cpp
master/semester-2/signal-processing/: readme.md  task-1.py  task-2.py  task-3.py  task-4.py  task-5.py  task-6.ipynb  task-7.ipynb  task-8.ipynb
master/semester-3/cuda/: README.md
master/semester-3/cuda/calculation_of_RGB_histogram/: CMakeLists.txt  argument_parser.h  histogram_generator.cu  image_rgb.cu  main.cu
master/semester-3/cuda/image_processing_using_2D_convolution/: CMakeLists.txt  argument_parser.cpp  convolution.cu  image_rgb.cu  main.cu  mask_utils.cpp  mask_utils.h
master/semester-3/cuda/image_processing_using_2D_convolution/utils/: pngio.cpp  pngio.h
master/semester-3/cuda/visualization_of_test_function/: CMakeLists.txt  cpu_generator.h  cpu_image.h  gpu_generator.cu  gpu_image.cu  headers.h  main.cu  opt_function.h
master/semester-3/cuda/visualization_of_test_function/utils/: CMakeLIsts.txt.tmp
master/semester-3/evolutionary-computing/: README.md  differential_evolution.ipynb  genetic_algorithm_bin.ipynb  genetic_algorithm_real.ipynb  pso.ipynb  soma.ipynb
(+399 files in other folders)
